--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Reset Password</h1>
 
-<%= form_with model: @user, url: session_path do |form| %>
+<%= form_with model: @user, url: password_reset_path do |form| %>
   <div>
     <%= form.label :email %>
     <%= form.email_field :email %>
